fix column alignment

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -10194,7 +10194,8 @@ a.link-dark {
   margin: 0 -20px 0 -20px !important;
   padding-bottom: 40px !important;
 }
-.team .col-sm-4 {
+.team .col-sm-4,
+.team .col-sm-6 {
   padding: 0 20px 0 20px !important;
 }
 .team p,
