--- a/public/assets/less/team.less
+++ b/public/assets/less/team.less
@@ -12,7 +12,7 @@
   margin: 0 -20px 0 -20px !important;
   padding-bottom: 40px !important;
 }
-.team .col-sm-4 {
+.team .col-sm-4, .team .col-sm-6 {
   padding: 0 20px 0 20px !important;
 }
 .team p, .team a {
